--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,8 @@
     "fuse.js": "^7.1.0",
     "html-to-pdfmake": "^2.0.0",
     "js-cookie": "^3.0.5",
+    "jspdf": "^2.5.1",              
+    "jspdf-autotable": "^3.8.2",    
     "pdfmake": "^0.3.0-beta.4",
     "postcss": "^8.5.6",
     "react": "^18.2.0",
@@ -31,6 +33,7 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "react-to-print": "^2.15.0",     
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
