--- a/backend/package.json
+++ b/backend/package.json
@@ -12,8 +12,9 @@
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.6.1",
     "express": "^4.18.2",
+    "express-fileupload": "^1.5.2",
     "jsonwebtoken": "^9.0.1",
     "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
