--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,27 +13,27 @@
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "dotenv": "^17.2.0",
-    "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "framer-motion": "^10.16.4",
     "fuse.js": "^7.1.0",
     "html-to-pdfmake": "^2.0.0",
     "js-cookie": "^3.0.5",
-    "jspdf": "^2.5.1",              
-    "jspdf-autotable": "^3.8.2",    
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "pdfmake": "^0.3.0-beta.4",
     "postcss": "^8.5.6",
+    "quill": "^2.0.3",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "react-draft-wysiwyg": "^1.15.0",
     "react-hook-form": "^7.51.5",
     "react-icons": "^4.12.0",
     "react-pdf": "^7.2.4",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
-    "react-to-print": "^2.15.0",     
+    "react-to-print": "^2.15.0",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
